--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "dotenv": "^16.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
+    "toastify-js": "^1.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
